# vim_rs

./: .gitignore  Cargo.toml  README.md
data/: device_tree.rs
eventster/: Cargo.toml
examples/: Cargo.toml  README.md  (+1 more)
examples/snippets/: Cargo.toml
examples/snippets/src/: env_browser.rs  eventster.rs  mac_monitor.rs  property_collector.rs
examples/tui/: Cargo.toml
examples/tui/src/: app.rs  event.rs  main.rs  vm.rs  vm_list.rs
examples/vim_tests/: Cargo.toml  README.md
examples/vim_tests/src/: api_test.rs  data_test.rs  lib.rs
vim/: Cargo.toml  build.rs
vim/src/: alarm.rs  alarm_manager.rs  authorization_manager.rs  base64.rs  certificate_manager.rs  cluster_compute_resource.rs  cluster_evc_manager.rs  cluster_profile.rs  cluster_profile_manager.rs  compute_resource.rs  container_view.rs  crypto_manager.rs  crypto_manager_host.rs  crypto_manager_host_kms.rs  crypto_manager_kmip.rs  custom_fields_manager.rs  customization_spec_manager.rs  datacenter.rs  datastore.rs  datastore_namespace_manager.rs  diagnostic_manager.rs  distributed_virtual_portgroup.rs  distributed_virtual_switch.rs  distributed_virtual_switch_manager.rs  environment_browser.rs  event_history_collector.rs  event_manager.rs  extensible_managed_object.rs  extension_manager.rs  failover_cluster_configurator.rs  failover_cluster_manager.rs  file_manager.rs  folder.rs  guest_alias_manager.rs  guest_auth_manager.rs  guest_file_manager.rs  guest_operations_manager.rs  guest_process_manager.rs  guest_windows_registry_manager.rs  health_update_manager.rs  (+102 more)
vim/src/core/: base64.rs  client.rs  helpers.rs  mod.rs
vim/src/mo/: alarm.rs  alarm_manager.rs  authorization_manager.rs  certificate_manager.rs  cluster_compute_resource.rs  cluster_evc_manager.rs  cluster_profile.rs  cluster_profile_manager.rs  compute_resource.rs  container_view.rs  crypto_manager.rs  crypto_manager_host.rs  crypto_manager_host_kms.rs  crypto_manager_kmip.rs  custom_fields_manager.rs  customization_spec_manager.rs  datacenter.rs  datastore.rs  datastore_namespace_manager.rs  diagnostic_manager.rs  distributed_virtual_portgroup.rs  distributed_virtual_switch.rs  distributed_virtual_switch_manager.rs  environment_browser.rs  event_history_collector.rs  event_manager.rs  extensible_managed_object.rs  extension_manager.rs  failover_cluster_configurator.rs  failover_cluster_manager.rs  file_manager.rs  folder.rs  guest_alias_manager.rs  guest_auth_manager.rs  guest_file_manager.rs  guest_operations_manager.rs  guest_process_manager.rs  guest_windows_registry_manager.rs  health_update_manager.rs  history_collector.rs  (+97 more)
vim/src/types/: action_trait.rs  active_directory_fault_trait.rs  alarm_action_trait.rs  alarm_event_trait.rs  alarm_expression_trait.rs  alarm_spec_trait.rs  answer_file_create_spec_trait.rs  apply_profile_trait.rs  array_update_spec_trait.rs  as_any.rs  authorization_event_trait.rs  base_config_info_backing_info_trait.rs  base_config_info_file_backing_info_trait.rs  base_config_info_trait.rs  boxed_types.rs  cannot_access_network_trait.rs  cannot_access_vm_component_trait.rs  cannot_access_vm_device_trait.rs  cannot_access_vm_disk_trait.rs  cannot_move_vsan_enabled_host_trait.rs  cluster_action_trait.rs  cluster_compute_resource_validation_result_base_trait.rs  cluster_das_admission_control_info_trait.rs  cluster_das_admission_control_policy_trait.rs  cluster_das_advanced_runtime_info_trait.rs  cluster_das_data_trait.rs  cluster_das_host_info_trait.rs  cluster_drs_faults_faults_by_vm_trait.rs  cluster_event_trait.rs  cluster_group_info_trait.rs  cluster_overcommitted_event_trait.rs  cluster_profile_config_spec_trait.rs  cluster_profile_create_spec_trait.rs  cluster_rule_info_trait.rs  cluster_slot_policy_trait.rs  cluster_status_changed_event_trait.rs  compute_resource_config_info_trait.rs  compute_resource_config_spec_trait.rs  compute_resource_summary_trait.rs  convert.rs  (+308 more)
vim_build/: Cargo.toml
vim_build/src/: generator.rs  lib.rs  main.rs  printer.rs
vim_build/src/rs_emitter/: boxed_types.rs  common.rs  deser.rs  enums.rs  errors.rs  library.rs  mo.rs  mod.rs  names.rs  ser.rs  struct_enum.rs  structs.rs  trait_emitter.rs  types.rs  vim_object.rs
vim_build/src/vim_model/: cycles.rs  loader.rs  mod.rs  struct_order.rs  types.rs
vim_rs/: Cargo.toml  build.rs
vim_rs/src/core/: client.rs  helpers.rs  mod.rs
vim_rs/src/mo/: alarm.rs  cluster_compute_resource.rs  cluster_evc_manager.rs  cluster_profile_manager.rs  compute_resource.rs  crypto_manager_host.rs  crypto_manager_host_kms.rs  customization_spec_manager.rs  datacenter.rs  datastore.rs  distributed_virtual_portgroup.rs  distributed_virtual_switch.rs  distributed_virtual_switch_manager.rs  event_history_collector.rs  event_manager.rs  extensible_managed_object.rs  extension_manager.rs  failover_cluster_configurator.rs  file_manager.rs  folder.rs  guest_alias_manager.rs  guest_operations_manager.rs  health_update_manager.rs  history_collector.rs  host_access_manager.rs  host_assignable_hardware_manager.rs  host_certificate_manager.rs  host_cpu_scheduler_system.rs  host_datastore_system.rs  host_date_time_system.rs  host_directory_store.rs  host_esx_agent_host_manager.rs  host_health_status_system.rs  host_image_config_manager.rs  host_network_system.rs  host_nvdimm_system.rs  host_pci_passthru_system.rs  host_power_system.rs  host_profile_manager.rs  host_service_system.rs  (+38 more)
vim_rs/src/types/: boxed_types.rs  convert.rs  deserialize.rs  dyn_serialize.rs  enums.rs  mod.rs  struct_enum.rs  traits.rs  vim_object_trait.rs
vim_rs/tests/: integration_test.rs
vim_tests/: Cargo.toml
vim_tests/src/: lib.rs  test.rs  url_template.rs  vim_client.rs
(+68 files in other folders)
