[package]
name = "vim-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
openapiv3 = "2.0.0"
proc-macro2 = "1.0.84"
serde_json = "1.0.117"
syn = { version = "2", features = ["full", "extra-traits", "parsing"] }
prettyplease = "0.2"
thiserror = "1.0.61"
serde = "1.0.203"
quote = "1.0.36"
indexmap = "2.2.6"
convert_case = "0.6.0"
