[package]
name = "vim"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
erased-serde = "0.4.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.129", features = ["raw_value"] }
thiserror = "2.0.3"
reqwest = { version = "0.12.8", features = ["json"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-macros = "2.4.0"
log = "0.4.22"
strum = "0.26.3"
strum_macros = "0.26.4"
