[package]
name = "vim_build"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate"
path = "src/main.rs"

[dependencies]
serde_json = "1.0.117"
thiserror = "1.0.61"
serde = { version = "1.0.203", features = ["derive"] }
quote = "1.0.37"
indexmap = { version = "2.2.6", features = ["serde"] }
convert_case = "0.6.0"
check_keyword = "0.3.1"
openapi30 = { path = "../openapi30" }