[package]
name = "vim_build"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate"
path = "src/main.rs"

[dependencies]
serde_json = "1.0.139"
thiserror = "2.0.11"
serde = { version = "1.0.218", features = ["derive"] }
indexmap = { version = "2.7.1", features = ["serde"] }
convert_case = "0.8.0"
check_keyword = "0.3.1"
openapi30 = { path = "../openapi30" }
log = "0.4.26"
