[package]
name = "vim_rs"
version = "0.1.0"
edition = "2021"
authors = ["Kiril Karaatanasov <karaatanasov@gmail.com>"]
license = "Apache-2.0"
description = "Rust Bindings for the VMware by Broadcom vCenter VI JSON API"
readme = "../README.md"
repository = "https://github.com/noclue/vim_rs"
homepage = "https://github.com/noclue/vim-rs"
documentation = "https://docs.rs/vim_rs"
keywords = ["vi-json", "vim", "bindings", "vcenter", "vmware"]
categories = ["api-bindings", "network-programming"]
exclude = ["target/*", "**/*.rs.bk"]

[dependencies]
base64 = "0.22.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
thiserror = "2.0.12"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
log = "0.4.26"
strum = "0.27.1"
strum_macros = "0.27.1"
env_logger = "0.11.6"

[build-dependencies]
rustc_version = "0.4.1"

[lib]
doctest = false
