[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
crossterm = {  version = "0.28.1", features = ["event-stream"]}
ratatui = {  version = "0.29.0" , features = ["crossterm"]}
tokio = {  version = "1.43.0", features = ["macros"]}
vim_rs = { version = "0.1.0", path = "../../vim_rs" }
futures-util = "0.3.31"
