[package]
name = "vim_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.6"
hyper = "1.5.0"
log = "0.4.22"
percent-encoding = "2.3.1"
reqwest = { version = "0.12.8", features = ["json"] }
serde = "1.0.210"
serde_json = "1.0.129"
strum = "0.26.3"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tokio-macros = "2.4.0"
vim = { version = "0.1.0", path = "../../vim" }
