[package]
name = "vim_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.6"
log = "0.4.26"
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.218"
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
vim = { version = "0.1.0", path = "../../vim" }
